[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.0", default-features = false }
volatile = "0.4"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["sse", "fpu", "pic", "pit"]
sse = []
fpu = []
pic = []
pit = []

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-none"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[workspace]
members = []
exclude = []

[dev-dependencies]

[patch.crates-io]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["staticlib"]

[package.metadata.playground]
runnable = false

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none"
]
test-success-exit-code = 33

